Add pydantic_settings dependency explicitly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 fastapi = "^0.115.7"
 pydantic = "^2.7.0"
 sqlalchemy = "^2.0.30"
+pydantic_settings = "^2.8.0"
 alembic = "^1.13.1"
 uvicorn = "^0.34.0"
 
